add swag
