# model/media.go
@@ -1,12 +1,11 @@
 package model
 
 type Media struct {
-	BaseModel `json:"-"`
-
-	InfoID string `gorm:"type:uuid;index;foreignKey:Info" json:"-"`
-	Info   Info   `json:"info"`
-	FileID string `gorm:"type:uuid;index;foreignKey:File" json:"-"`
-	File   File   `json:"file"`
+	BaseModel `json:"-" swaggerignore:"true"`
+	InfoID    string `gorm:"type:uuid;index;foreignKey:Info" json:"-"`
+	Info      Info   `json:"info"`
+	FileID    string `gorm:"type:uuid;index;foreignKey:File" json:"-"`
+	File      File   `json:"file"`
 }
 
 func init() {
