# model/page.go
@@ -13,18 +13,18 @@ import (
 var DefaultPaginatorPerPage = 10
 
 type Paginator struct {
-	CurrentPage  int
-	LastPage     int
-	PerPage      int
-	Data         interface{}
-	Total        int64
-	FirstPageURL string
-	LastPageURL  string
-	NextPageURL  string
-	PrevPageURL  string
-	Path         string
-	From         int
-	To           int
+	CurrentPage  int         `json:"current_page"`
+	LastPage     int         `json:"last_page"`
+	PerPage      int         `json:"per_page"`
+	Data         interface{} `json:"data"`
+	Total        int64       `json:"total"`
+	FirstPageURL string      `json:"first_page_url"`
+	LastPageURL  string      `json:"last_page_url"`
+	NextPageURL  string      `json:"next_page_url"`
+	PrevPageURL  string      `json:"prev_page_url"`
+	Path         string      `json:"path"`
+	From         int         `json:"from"`
+	To           int         `json:"to"`
 }
 
 func defaultPage(v interface{}) *Paginator {
